# aiagent

./: .dockerignore  .env  .env.docker  .env.optimized  .env.production  .gitignore  .gitmodules  AGENT_ARCHITECTURE.md  AGENT_MULTI_TURN_CONVERSATION_PLAN.md  AI_DECISION_SYSTEM_INTEGRATION_PLAN.md  AI_DECISION_SYSTEM_UPDATED_PLAN.md  ANIMATION_FEATURES_IMPLEMENTATION.md  ANSWER_DISPLAY_FIX.md  ARCHITECTURE_5LAYERS_PRECISE.md  BACKEND_ONLY_DEPLOY.md  BACKEND_README.md  BACKEND_STARTUP_GUIDE.md  BREAKTHROUGH_PLAN.md  DECISION_DUNGEON_SYSTEM.md  DECISION_FLOW_4_STAGES.md  DECISION_FLOW_IMPLEMENTATION_SUMMARY.md  DECISION_HISTORY_FEATURE.md  DECISION_HISTORY_IMPLEMENTATION_STATUS.md  DECISION_HISTORY_UI_SUMMARY.md  DECISION_LAYER_COMPLETION.md  DECISION_LAYER_QUICK_START.md  DECISION_LAYER_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOY_GUIDE.md  DETAILED_COMPARISON.md  DOCKER_DEPLOY.md  DRAWIO_ARCHITECTURE_PROMPT.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.optimized  FINAL_FIX_SUMMARY.md  FINAL_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION_COMPLETE.md  FRONTEND_DEPLOYMENT_FIX.md  GPU服务器快速启动.md  (+197 more)
android/: AI_CHAT_HISTORY_CRASH_FIX.md  AI_CHAT_NAVIGATION_DEBUG.md  AI_CHAT_NAVIGATION_GUIDE.md  DEBUG_SIMULATION_ISSUE.md  DECISION_FEATURE_STATUS.md  README.md  (+30 more)
harmonyos/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  nebula_chat_renderer.cpp  nebula_chat_renderer.h  shader_utils.cpp  shader_utils.h  starmap_renderer.cpp  starmap_renderer.h  starmap_types.h
harmonyos/entry/src/main/cpp/knowledge_graph/: KnowledgeGraphRenderer.h  MatrixUtils.cpp  MatrixUtils.h  ShaderUtils.h
(+1120 files in other folders)
